2023-01-24  G. Branden Robinson <g.branden.robinson@gmail.com>

	* m.tmac (df@print-float): Eliminate spew at high debug levels.
	This macro gets called even when there aren't any floating
	displays pending, so we cannot assume that related registers are
	defined.

2023-01-24  G. Branden Robinson <g.branden.robinson@gmail.com>

	* m.tmac (P): Fix missing backslash after brace escape sequence.
	Problem introduced by me in 3b1afbdb8e, 6 January.

2023-01-22  G. Branden Robinson <g.branden.robinson@gmail.com>

	* m.tmac: Help user navigate the document type macros.  Stop
	setting up the formatter to throw "unrecognized macro"
	diagnostics for macros that are plainly documented in
	groff_mm(7).
	(@disable): New macro takes a list of macros whose definitions
	are replaced with a warning diagnostic about how they're no
	longer unavailable due to use of another document type macro
	already called, identified by new string `@cover`.
	(TL, MT, COVER, LT, LO): Define `@cover` and call `@disable`.
	Drop existing diagnostics that did a similar thing as above,
	more verbosely.

2023-01-17  G. Branden Robinson <g.branden.robinson@gmail.com>

	* m.tmac: Revise diagnostic messages.  Use a consistent message
	format, including a space after a colon and the name of the
	complaining macro.
	(pg@header): Drop unnecessary empty comment at end of macro
	call.  Macro call syntax differs from `ds` request syntax.
	(2C, MC, FD, FS, FE, DF, LB, LI, LE, LC, AL, ML, VL, BL, DL, RL)
	(BVL, TH, TE, PS, B1, B2, APPSK, AS, SETR, GETST, GETHN, GETPN)
	(INITI, IND, LT, LO): Refer to self with `\$0` string instead of
	a literal.
	(2C, MC, PS): Throw fatal error immediately instead of doing
	other processing first.
	(2C, MC, FD, FS, FE, DF, ds@set-format, ds@end, LB, LI, LE, LC)
	(AL, ML, VL, BL, DL, RL, BVL, TH, TE, B1, B2, APPSK, AS, SETR)
	(GETST, GETHN, GETPN, INITI, IND, let*lt-sign, LT, LO): Stop
	unnecessarily quoting arguments to @error macro.