@@ -1,5 +1,12 @@
 2023-01-24  G. Branden Robinson <g.branden.robinson@gmail.com>
 
+	Regression-test Savannah #54909.
+
+	* tests/P-indentation-works.sh: Do it.
+	* mm.am (mm_TESTS): Run test.
+
+2023-01-24  G. Branden Robinson <g.branden.robinson@gmail.com>
+
 	* m.tmac (df@print-float): Eliminate spew at high debug levels.
 	This macro gets called even when there aren't any floating
 	displays pending, so we cannot assume that related registers are
